@@ -4,10 +4,10 @@ import com.nfl.glitr.registry.TypeRegistry;
 import graphql.relay.*;
 import graphql.schema.*;
 
-import javax.xml.bind.DatatypeConverter;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 
 import static graphql.Assert.assertNotNull;
@@ -54,6 +54,8 @@ public class RelayHelper {
 
         ConnectionCursor startCursor = null;
         ConnectionCursor endCursor = null ;
+        ConnectionCursor previousPageStartCursor = null ;
+
         boolean hasPreviousPage = skipItems > 0 && totalCount > 0;
         boolean hasNextPage = skipItems + edges.size() + 1 < totalCount;
 
@@ -62,37 +64,46 @@ public class RelayHelper {
             Edge lastEdge = edges.get(edges.size() - 1);
             startCursor = firstEdge.getCursor();
             endCursor = lastEdge.getCursor();
+
+            int offsetFromCursor = getOffsetFromCursor(startCursor.getValue(), 0);
+
+            String cursor = createCursor(0);
+            if (offsetFromCursor - edges.size() > 0) {
+                cursor = createCursor(offsetFromCursor - edges.size());
+            }
+
+            previousPageStartCursor = new DefaultConnectionCursor(cursor);
         }
 
-        PageInfoWithTotal pageInfoWithTotal = new PageInfoWithTotal(startCursor, endCursor,
-                hasPreviousPage, hasNextPage);
+        PageInfoWithTotal pageInfoWithTotal = new PageInfoWithTotal(startCursor, endCursor, hasPreviousPage, hasNextPage);
         pageInfoWithTotal.setTotal(totalCount);
+        pageInfoWithTotal.setPreviousPageStartCursor(previousPageStartCursor);
 
         return new DefaultConnection<>(edges, pageInfoWithTotal);
     }
 
     public static String createCursor(int offset) {
-        return Base64.toBase64(DUMMY_CURSOR_PREFIX + Integer.toString(offset));
+        return Base64Helper.toBase64(DUMMY_CURSOR_PREFIX + offset);
     }
 
     public static int getOffsetFromCursor(String cursor, int defaultValue) {
         if (cursor == null) return defaultValue;
-        String string = Base64.fromBase64(cursor);
+        String string = Base64Helper.fromBase64(cursor);
         return Integer.parseInt(string.substring(DUMMY_CURSOR_PREFIX.length()));
     }
 
 
-    static public class Base64 {
+    static public class Base64Helper {
 
-        private Base64() {
+        private Base64Helper() {
         }
 
         public static String toBase64(String string) {
-            return DatatypeConverter.printBase64Binary(string.getBytes(StandardCharsets.UTF_8));
+            return Base64.getEncoder().encodeToString(string.getBytes(StandardCharsets.UTF_8));
         }
 
         public static String fromBase64(String string) {
-            return new String(DatatypeConverter.parseBase64Binary(string), Charset.forName("UTF-8"));
+            return new String(Base64.getDecoder().decode(string), Charset.forName("UTF-8"));
         }
     }
 }
